# snacks-crud

./: README.md  db.sqlite3  pyproject.toml  sample_env.txt  style.css
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py  urls.py
templates/: base.html  snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
templates/static/: base.css
